--- a/footer.html
+++ b/footer.html
@@ -1,107 +1,165 @@
 <!DOCTYPE html>
 <html lang="fr">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projet Hackaton</title>
+        <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+            crossorigin="anonymous"
+        />
+        <!-- INSERT HERE LIBRARYS -->
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet Hackaton</title>
-    <link rel="stylesheet" href="assets/css/dist/style.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" />
-    <!-- INSERT HERE LIBRARYS -->
-</head>
+    <body>
+        <main>
+            <!-- NEWSLETTER -->
 
-<body>
-    <main>
+            <div id="newsletter">
+                <h4 class="title-news">Newsletter</h4>
 
-        <!-- NEWSLETTER -->
-
-        <div id="newsletter">
-            <h4 class="title-news">Newsletter</h4>
-
-            <form action="" class="news-inputs">
-                <label class="news-name">Nom / Prénom :
-                    <input type="text" name="news-name" id="news-name" placeholder="Votre prénom et nom ici ">
-                </label>
-                <label class="news-name-mobile">
-                    <input type="text" name="news-name" id="news-name" placeholder="Nom prénom">
-                </label>
-                <label class="news-mail">E-mail:
-                    <input type="email" name="mail" placeholder="Votre email ici">
-                </label>
-                <label class="news-mail-mobile">
-                    <input type="email" name="mail" placeholder="E-mail:">
-                </label>
-                <label class="check">
-                    <input type="checkbox" name="conditions" id="conds">
-                    <span class="checkmark"></span>
-                    En cochant cette case j'accepte les termes et conditions d'utilisations
-                </label>
-                <label class="check-mobile">
-                    <input type="checkbox" name="conditions" id="conds">
-                    <span class="checkmark"></span>
-                    <span class="check-text">J'accepte les conditions d'utilisations générales d'utilisation du
-                        site</span>
-                </label>
-                <div id="news-btn">S'inscrire</div>
-            </form>
-        </div>
-    </main>
-    <!-- FOOTER -->
-
-    <footer>
-        <div id="footer">
-            <div id="footer-head">
-                <div id="campus-logo-mobile">
-                    <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
-                </div>
-                <ul class="networks-icons-mobile">
-                    <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
-                    </li>
-                    <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
-                    <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
-                    <li><a
-                            href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
-                                class="fab fa-linkedin-in"></i></a></li>
-                </ul>
-
-                <div class="large-links">
-                    <ul class="networks-icons-large">
-                        <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
-                        <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
-                        <li><a
-                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
-                                    class="fab fa-linkedin-in"></i></a></li>
-                    </ul>
-                    <ul id="foot-links">
-                        <li><a href="cgu.html">CGU</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="mention.html"> Mentions légales </a></li>
-                    </ul>
-                </div>
-                <ul>
-                    <li>Campus Du lac Rive Gauche</li>
-                    <li>10 Rue Rene Cassin</li>
-                    <li>CS 31996</li>
-                    <li>33071 Bordeaux Cedex</li>
-                    <li>Telephone: 05 56 79 52 00</li>
-                </ul>
-                <ul class="adress">
-                    <li>Campus du Lac Rive droite</li>
-                    <li>7 bis rue max Linder</li>
-                    <li>BP 194</li>
-                    <li>33504 Libourne Cedex</li>
-                    <li>Telephone: 05 56 79 52 00</li>
-                </ul>
+                <form action="" class="news-inputs">
+                    <label class="news-name"
+                        >Nom / Prénom :
+                        <input
+                            type="text"
+                            name="news-name"
+                            id="news-name"
+                            placeholder="Votre prénom et nom ici "
+                        />
+                    </label>
+                    <label class="news-name-mobile">
+                        <input
+                            type="text"
+                            name="news-name"
+                            id="news-name"
+                            placeholder="Nom prénom"
+                        />
+                    </label>
+                    <label class="news-mail"
+                        >E-mail:
+                        <input
+                            type="email"
+                            name="mail"
+                            placeholder="Votre email ici"
+                        />
+                    </label>
+                    <label class="news-mail-mobile">
+                        <input type="email" name="mail" placeholder="E-mail:" />
+                    </label>
+                    <label class="check">
+                        <input type="checkbox" name="conditions" id="conds" />
+                        <span class="checkmark"></span>
+                        En cochant cette case j'accepte les termes et conditions
+                        d'utilisations
+                    </label>
+                    <label class="check-mobile">
+                        <input type="checkbox" name="conditions" id="conds" />
+                        <span class="checkmark"></span>
+                        <span class="check-text"
+                            >J'accepte les conditions d'utilisations générales
+                            d'utilisation du site</span
+                        >
+                    </label>
+                    <div id="news-btn">S'inscrire</div>
+                </form>
             </div>
-            <div id="copyright">Copyright © All rights reserved 2021 Team 4</div>
-        </div>
-    </footer>
-    <script src="./assets/js/dist/scripts.min.js"></script>
-</body>
+        </main>
+        <!-- FOOTER -->
 
+        <footer>
+            <div id="footer">
+                <div id="footer-head">
+                    <div id="campus-logo-mobile">
+                        <img
+                            src="./assets/img/src/logo-white.svg"
+                            alt="logo-campus"
+                            id="campus-log"
+                        />
+                    </div>
+                    <ul class="networks-icons-mobile">
+                        <li>
+                            <a
+                                href="https://www.instagram.com/campusdulac/?hl=fr"
+                                ><i class="fab fa-instagram"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/campusdulac/"
+                                ><i class="fab fa-facebook-f"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/campusdulac?lang=fr"
+                                ><i class="fab fa-twitter"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                ><i class="fab fa-linkedin-in"></i
+                            ></a>
+                        </li>
+                    </ul>
+
+                    <div class="large-links">
+                        <ul class="networks-icons-large">
+                            <li>
+                                <a
+                                    href="https://www.instagram.com/campusdulac/?hl=fr"
+                                    ><i class="fab fa-instagram"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/campusdulac/"
+                                    ><i class="fab fa-facebook-f"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://twitter.com/campusdulac?lang=fr"
+                                    ><i class="fab fa-twitter"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                    ><i class="fab fa-linkedin-in"></i
+                                ></a>
+                            </li>
+                        </ul>
+                        <ul id="foot-links">
+                            <li><a href="cgu.html">CGU</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li>
+                                <a href="mention.html"> Mentions légales </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <ul>
+                        <li>Campus Du lac Rive Gauche</li>
+                        <li>10 Rue Rene Cassin</li>
+                        <li>CS 31996</li>
+                        <li>33071 Bordeaux Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                    <ul class="adress">
+                        <li>Campus du Lac Rive droite</li>
+                        <li>7 bis rue max Linder</li>
+                        <li>BP 194</li>
+                        <li>33504 Libourne Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                </div>
+                <div id="copyright">
+                    Copyright © All rights reserved 2021 Team 4
+                </div>
+            </div>
+        </footer>
+        <script src="./assets/js/dist/scripts.min.js"></script>
+    </body>
 </html>
