--- a/header.html
+++ b/header.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projet Hackaton</title>
+        <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+        <!-- INSERT HERE LIBRARYS -->
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet Hackaton</title>
-    <link rel="stylesheet" href="assets/css/dist/style.min.css">
-    <!-- INSERT HERE LIBRARYS -->
-</head>
-
-<body>
+    <body>
         <header class="main-header">
             <div class="logo">
-                <a href="index.html"><img src="/assets/img/src/logo_campus_transparent.PNG.png" alt=""></a>
+                <a href="index.html"
+                    ><img
+                        src="/assets/img/src/logo_campus_transparent.PNG.png"
+                        alt=""
+                /></a>
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -36,7 +39,6 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-    <script src="./assets/js/dist/scripts.min.js"></script>
-</body>
-
+        <script src="./assets/js/dist/scripts.min.js"></script>
+    </body>
 </html>
