--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Projet Hackaton</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css"
+        />
         <link rel="stylesheet" href="assets/css/dist/style.min.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
             integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-            crossorigin="anonymous" />
+            crossorigin="anonymous"
+        />
     </head>
     <body>
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+                <img
+                    src="/assets/img/src/logo_campus_transparent.PNG.png"
+                    alt=""
+                />
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -28,10 +37,22 @@
                 <li id="portfolio">
                     <a>Portfolio</a>
                     <ul class="second-menu" id="secondary-menu">
-                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
-                        <li><a href="portfolio-section-design.html">Web Design</a></li>
-                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
-                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
+                        <li>
+                            <a href="portfolio-section-dev.html">Web Devs</a>
+                        </li>
+                        <li>
+                            <a href="portfolio-section-design.html"
+                                >Web Design</a
+                            >
+                        </li>
+                        <li>
+                            <a href="portfolio-section-cpw.html"
+                                >Chef Projet Marketing</a
+                            >
+                        </li>
+                        <li>
+                            <a href="portfolio-section-graph.html">Graphiste</a>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="contact.html">Contact</a></li>
@@ -41,8 +62,11 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <h2>Bienvenue sur notre accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web
-                            du Campus Du Lac.</h2>
+                        <h2>
+                            Bienvenue sur notre accueil, d'ici vous pouvez
+                            accéder aux portfolios de toutes les sections web du
+                            Campus Du Lac.
+                        </h2>
                         <img src="./assets/img/src/bg-header.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
@@ -66,7 +90,12 @@
         </div>
         <h1 class="title">Derniers Projets des élèves</h1>
         <section id="last-project" class="portfolio">
-            <article data-aos="fade-right" data-aos-duration="1000" id="last-project-1" class="card">
+            <article
+                data-aos="fade-right"
+                data-aos-duration="200"
+                id="last-project-1"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Section</h2>
@@ -75,7 +104,12 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-up" data-aos-duration="1000" id="last-project-2" class="card">
+            <article
+                data-aos="fade-up"
+                data-aos-duration="200"
+                id="last-project-2"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Section</h2>
@@ -84,7 +118,12 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-left" data-aos-duration="1000" id="last-project-3" class="card">
+            <article
+                data-aos="fade-left"
+                data-aos-duration="200"
+                id="last-project-3"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Section</h2>
@@ -93,8 +132,13 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="500" id="last-project-4"
-                class="card">
+            <article
+                data-aos="fade-right"
+                data-aos-duration="200"
+                data-aos-offset="500"
+                id="last-project-4"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Section</h2>
@@ -103,7 +147,13 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="600" id="last-project-5" class="card">
+            <article
+                data-aos="fade-up"
+                data-aos-duration="200"
+                data-aos-offset="600"
+                id="last-project-5"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Section</h2>
@@ -112,8 +162,13 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="700" id="last-project-6"
-                class="card">
+            <article
+                data-aos="fade-left"
+                data-aos-duration="200"
+                data-aos-offset="700"
+                id="last-project-6"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Section</h2>
@@ -125,28 +180,52 @@
         </section>
         <h1 class="title">Portfolio</h1>
         <section style="max-width: 1200px" class="portfolio">
-            <article data-aos="fade-right" data-aos-duration="1200" data-aos-offset="500" id="dev" class="card">
+            <article
+                data-aos="fade-right"
+                data-aos-duration="1200"
+                data-aos-offset="500"
+                id="dev"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="portfolio-section-dev.html">
                         <h2>Web Devs</h2>
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-left" data-aos-duration="1200" data-aos-offset="600" id="design" class="card">
+            <article
+                data-aos="fade-left"
+                data-aos-duration="1200"
+                data-aos-offset="600"
+                id="design"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="portfolio-section-design.html">
                         <h2>Web Design</h2>
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="500" id="cpw" class="card">
+            <article
+                data-aos="fade-up"
+                data-aos-duration="200"
+                data-aos-offset="500"
+                id="cpw"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="portfolio-section-cpw.html">
                         <h2>Chef de Projet WebMarketing</h2>
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="500" id="graph" class="card">
+            <article
+                data-aos="fade-up"
+                data-aos-duration="200"
+                data-aos-offset="500"
+                id="graph"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="portfolio-section-graph.html">
                         <h2>Graphistes</h2>
@@ -158,14 +237,30 @@
             <div id="newsletter">
                 <h4 class="title title-news">Newsletter</h4>
                 <form action="" class="news-inputs">
-                    <label class="news-name">Nom / Prénom :
-                        <input type="text" name="news-name" id="news-name" placeholder="Votre prénom et nom ici " />
+                    <label class="news-name"
+                        >Nom / Prénom :
+                        <input
+                            type="text"
+                            name="news-name"
+                            id="news-name"
+                            placeholder="Votre prénom et nom ici "
+                        />
                     </label>
                     <label class="news-name-mobile">
-                        <input type="text" name="news-name" id="news-name" placeholder="Nom prénom" />
+                        <input
+                            type="text"
+                            name="news-name"
+                            id="news-name"
+                            placeholder="Nom prénom"
+                        />
                     </label>
-                    <label class="news-mail">E-mail:
-                        <input type="email" name="mail" placeholder="Votre email ici" />
+                    <label class="news-mail"
+                        >E-mail:
+                        <input
+                            type="email"
+                            name="mail"
+                            placeholder="Votre email ici"
+                        />
                     </label>
                     <label class="news-mail-mobile">
                         <input type="email" name="mail" placeholder="E-mail:" />
@@ -179,8 +274,10 @@
                     <label class="check-mobile">
                         <input type="checkbox" name="conditions" id="conds" />
                         <span class="checkmark"></span>
-                        <span class="check-text">J'accepte les conditions d'utilisations générales
-                            d'utilisation du site</span>
+                        <span class="check-text"
+                            >J'accepte les conditions d'utilisations générales
+                            d'utilisation du site</span
+                        >
                     </label>
                     <div id="news-btn">S'inscrire</div>
                 </form>
@@ -191,37 +288,68 @@
             <div id="footer">
                 <div id="footer-head">
                     <div id="campus-logo-mobile">
-                        <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
+                        <img
+                            src="./assets/img/src/logo-white.svg"
+                            alt="logo-campus"
+                            id="campus-log"
+                        />
                     </div>
                     <ul class="networks-icons-mobile">
-                        <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i
-                                    class="fab fa-instagram"></i></a>
+                        <li>
+                            <a
+                                href="https://www.instagram.com/campusdulac/?hl=fr"
+                                ><i class="fab fa-instagram"></i
+                            ></a>
                         </li>
-                        <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a>
+                        <li>
+                            <a href="https://www.facebook.com/campusdulac/"
+                                ><i class="fab fa-facebook-f"></i
+                            ></a>
                         </li>
-                        <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a>
+                        <li>
+                            <a href="https://twitter.com/campusdulac?lang=fr"
+                                ><i class="fab fa-twitter"></i
+                            ></a>
                         </li>
-                        <li><a
-                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
-                                    class="fab fa-linkedin-in"></i></a></li>
+                        <li>
+                            <a
+                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                ><i class="fab fa-linkedin-in"></i
+                            ></a>
+                        </li>
                     </ul>
                     <div class="large-links">
                         <ul class="networks-icons-large">
-                            <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i
-                                        class="fab fa-instagram"></i></a>
+                            <li>
+                                <a
+                                    href="https://www.instagram.com/campusdulac/?hl=fr"
+                                    ><i class="fab fa-instagram"></i
+                                ></a>
                             </li>
-                            <li><a href="https://www.facebook.com/campusdulac/"><i
-                                        class="fab fa-facebook-f"></i></a> </li>
-                            <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a>
+                            <li>
+                                <a href="https://www.facebook.com/campusdulac/"
+                                    ><i class="fab fa-facebook-f"></i
+                                ></a>
                             </li>
-                            <li><a
-                                    href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
-                                        class="fab fa-linkedin-in"></i></a></li>
+                            <li>
+                                <a
+                                    href="https://twitter.com/campusdulac?lang=fr"
+                                    ><i class="fab fa-twitter"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                    ><i class="fab fa-linkedin-in"></i
+                                ></a>
+                            </li>
                         </ul>
                         <ul id="foot-links">
                             <li><a href="cgu.html">CGU</a></li>
                             <li><a href="contact.html">Contact</a></li>
-                            <li><a href="mention.html"> Mentions légales </a></li>
+                            <li>
+                                <a href="mention.html"> Mentions légales </a>
+                            </li>
                         </ul>
                     </div>
                     <ul>
@@ -239,11 +367,13 @@
                         <li>Telephone: 05 56 79 52 00</li>
                     </ul>
                 </div>
-                <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
+                <p id="copyright">
+                    Copyright © All rights reserved 2021 Team 4
+                </p>
             </div>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
         <script src="./assets/js/dist/scripts.min.js"></script>
         <script>
             AOS.init();
