--- a/project.html
+++ b/project.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +9,6 @@
     <link rel="stylesheet" href="assets/css/dist/style.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-
 <body>
     <header class="main-header">
         <div class="logo">
@@ -158,59 +156,14 @@
         <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js">
-
     </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js%22%3E"></script>
+    <script src="./assets/js/dist/scripts.min.js"></script>
     <script>
         new Splide('#splide', {
             perPage: 1,
             rewind: true,
         }).mount();
-
-
-
-
-//         if (matchMedia) {
-//             const mq = window.matchMedia("(max-width: 360px)");
-//             mq.addListener(WidthChange);
-//             WidthChange(mq);
-//         }
-
-//         function WidthChange (mq) {
-//   if (mq.matches) {
-//     document.addEventListener('DOMContentLoaded', function () {
-//             Splide('.splide', {
-//                 perPage: 2,
-//                 rewind: true,
-//             }).mount();
-//         })
-
-//   } 
-//   else{
-//     Splide('.splide', {
-//                 perPage: 1,
-//                 rewind: true,
-//             }).mount();
-
-// }
-// }
-
-
-
-
-        // document.addEventListener('DOMContentLoaded', function () {
-        //     new Splide('.splide', {
-        //         perPage: 2,
-        //         rewind: true,
-        //     }).mount();
-        // });
-
-
-
-
-
-
     </script>
-
 </body>
-
 </html>
