--- a/index-v2.html
+++ b/index-v2.html
@@ -14,7 +14,11 @@
     <body id="new-version-body">
         <header class="main-header">
             <div class="logo">
-                <a href="index.html"><img src="/assets/img/src/logo_campus_transparent.PNG.png" alt=""></a>
+                <a href="index.html"
+                    ><img
+                        src="/assets/img/src/logo_campus_transparent.PNG.png"
+                        alt=""
+                /></a>
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -28,10 +32,22 @@
                 <li id="portfolio">
                     <a>Portfolio</a>
                     <ul class="second-menu" id="secondary-menu">
-                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
-                        <li><a href="portfolio-section-design.html">Web Design</a></li>
-                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
-                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
+                        <li>
+                            <a href="portfolio-section-dev.html">Web Devs</a>
+                        </li>
+                        <li>
+                            <a href="portfolio-section-design.html"
+                                >Web Design</a
+                            >
+                        </li>
+                        <li>
+                            <a href="portfolio-section-cpw.html"
+                                >Chef Projet Marketing</a
+                            >
+                        </li>
+                        <li>
+                            <a href="portfolio-section-graph.html">Graphiste</a>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="contact.html">Contact</a></li>
@@ -46,7 +62,11 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <h2>Bienvenue sur notre accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web du Campus Du Lac.</h2>
+                        <h2>
+                            Bienvenue sur notre accueil, d'ici vous pouvez
+                            accéder aux portfolios de toutes les sections web du
+                            Campus Du Lac.
+                        </h2>
                         <img src="./assets/img/src/bg-header.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
@@ -129,9 +149,9 @@
         <section style="max-width: 1200px" class="portfolio">
             <article id="dev" class="card">
                 <div class="body-card">
-                <a href="portfolio-section-dev.html">
-                    <h2>Web Devs</h2>
-                </a>
+                    <a href="portfolio-section-dev.html">
+                        <h2>Web Devs</h2>
+                    </a>
                 </div>
             </article>
             <article id="design" class="card">
@@ -160,14 +180,30 @@
             <div id="newsletter">
                 <h4 class="title title-news">Newsletter</h4>
                 <form action="" class="news-inputs">
-                    <label class="news-name">Nom / Prénom :
-                        <input type="text" name="news-name" id="news-name" placeholder="Votre prénom et nom ici " />
+                    <label class="news-name"
+                        >Nom / Prénom :
+                        <input
+                            type="text"
+                            name="news-name"
+                            id="news-name"
+                            placeholder="Votre prénom et nom ici "
+                        />
                     </label>
                     <label class="news-name-mobile">
-                        <input type="text" name="news-name" id="news-name" placeholder="Nom prénom" />
+                        <input
+                            type="text"
+                            name="news-name"
+                            id="news-name"
+                            placeholder="Nom prénom"
+                        />
                     </label>
-                    <label class="news-mail">E-mail:
-                        <input type="email" name="mail" placeholder="Votre email ici" />
+                    <label class="news-mail"
+                        >E-mail:
+                        <input
+                            type="email"
+                            name="mail"
+                            placeholder="Votre email ici"
+                        />
                     </label>
                     <label class="news-mail-mobile">
                         <input type="email" name="mail" placeholder="E-mail:" />
@@ -181,8 +217,10 @@
                     <label class="check-mobile">
                         <input type="checkbox" name="conditions" id="conds" />
                         <span class="checkmark"></span>
-                        <span class="check-text">J'accepte les conditions d'utilisations générales
-                            d'utilisation du site</span>
+                        <span class="check-text"
+                            >J'accepte les conditions d'utilisations générales
+                            d'utilisation du site</span
+                        >
                     </label>
                     <div id="news-btn">S'inscrire</div>
                 </form>
@@ -193,37 +231,68 @@
             <div id="footer">
                 <div id="footer-head">
                     <div id="campus-logo-mobile">
-                        <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
+                        <img
+                            src="./assets/img/src/logo-white.svg"
+                            alt="logo-campus"
+                            id="campus-log"
+                        />
                     </div>
                     <ul class="networks-icons-mobile">
-                        <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i
-                                    class="fab fa-instagram"></i></a>
+                        <li>
+                            <a
+                                href="https://www.instagram.com/campusdulac/?hl=fr"
+                                ><i class="fab fa-instagram"></i
+                            ></a>
                         </li>
-                        <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a>
+                        <li>
+                            <a href="https://www.facebook.com/campusdulac/"
+                                ><i class="fab fa-facebook-f"></i
+                            ></a>
                         </li>
-                        <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a>
+                        <li>
+                            <a href="https://twitter.com/campusdulac?lang=fr"
+                                ><i class="fab fa-twitter"></i
+                            ></a>
                         </li>
-                        <li><a
-                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
-                                    class="fab fa-linkedin-in"></i></a></li>
+                        <li>
+                            <a
+                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                ><i class="fab fa-linkedin-in"></i
+                            ></a>
+                        </li>
                     </ul>
                     <div class="large-links">
                         <ul class="networks-icons-large">
-                            <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i
-                                        class="fab fa-instagram"></i></a>
+                            <li>
+                                <a
+                                    href="https://www.instagram.com/campusdulac/?hl=fr"
+                                    ><i class="fab fa-instagram"></i
+                                ></a>
                             </li>
-                            <li><a href="https://www.facebook.com/campusdulac/"><i
-                                        class="fab fa-facebook-f"></i></a> </li>
-                            <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a>
+                            <li>
+                                <a href="https://www.facebook.com/campusdulac/"
+                                    ><i class="fab fa-facebook-f"></i
+                                ></a>
                             </li>
-                            <li><a
-                                    href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
-                                        class="fab fa-linkedin-in"></i></a></li>
+                            <li>
+                                <a
+                                    href="https://twitter.com/campusdulac?lang=fr"
+                                    ><i class="fab fa-twitter"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                    ><i class="fab fa-linkedin-in"></i
+                                ></a>
+                            </li>
                         </ul>
                         <ul id="foot-links">
                             <li><a href="cgu.html">CGU</a></li>
                             <li><a href="contact.html">Contact</a></li>
-                            <li><a href="mention.html"> Mentions légales </a></li>
+                            <li>
+                                <a href="mention.html"> Mentions légales </a>
+                            </li>
                         </ul>
                     </div>
                     <ul>
@@ -241,7 +310,9 @@
                         <li>Telephone: 05 56 79 52 00</li>
                     </ul>
                 </div>
-                <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
+                <p id="copyright">
+                    Copyright © All rights reserved 2021 Team 4
+                </p>
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
