--- a/login.html
+++ b/login.html
@@ -1,106 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css"
+        />
+        <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+            crossorigin="anonymous"
+        />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
-    <link rel="stylesheet" href="assets/css/dist/style.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" />
-</head>
-
-<body>
-    <header class="main-header">
-        <div class="logo">
-            <a href="index.html"><img src="/assets/img/src/logo_campus_transparent.PNG.png" alt=""></a>
-        </div>
-        <div class="burger-bar" id="burger">
-            <div class="first-line"></div>
-            <div class="second-line"></div>
-            <div class="third-line"></div>
-        </div>
-    </header>
-    <nav class="main-menu" id="main-menu">
-        <ul class="first-menu">
-            <li><a href="index.html">Accueil</a></li>
-            <li id="portfolio">
-                <a>Portfolio</a>
-                <ul class="second-menu" id="secondary-menu">
-                    <li><a href="portfolio-section-dev.html">Web Devs</a></li>
-                    <li><a href="portfolio-section-design.html">Web Design</a></li>
-                    <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
-                    <li><a href="portfolio-section-graph.html">Graphiste</a></li>
-                </ul>
-            </li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <div id="login-container">
-        <h2>Connectez -vous à votre espace</h2>
-        <input type="email" placeholder="sam-oustache@gitstash.com">
-        <input type="password" placeholder="Mot de passe">
-        <p class="mot_oublié"><a href="#">Mot de passe oublié ? </a></p>
-        <p><a href="create-1.html">Ou inscrivez-vous</a></p>
-        <input class="login-button" type="submit" value="Connexion">
-    </div>
-    <!-- FOOTER -->
-    <div class="main2"></div>
-    <footer>
-        <div id="footer">
-            <div id="footer-head">
-                <div id="campus-logo-mobile">
-                    <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
-                </div>
-                <ul class="networks-icons-mobile">
-                    <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
-                    </li>
-                    <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
-                    <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
-                    <li><a
-                            href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
-                                class="fab fa-linkedin-in"></i></a></li>
-                </ul>
-
-                <div class="large-links">
-                    <ul class="networks-icons-large">
-                        <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
-                        <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
-                        <li><a
-                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
-                                    class="fab fa-linkedin-in"></i></a></li>
-                    </ul>
-                    <ul id="foot-links">
-                        <li><a href="cgu.html">CGU</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="mention.html"> Mentions légales </a></li>
-                    </ul>
-                </div>
-                <ul>
-                    <li>Campus Du lac Rive Gauche</li>
-                    <li>10 Rue Rene Cassin</li>
-                    <li>CS 31996</li>
-                    <li>33071 Bordeaux Cedex</li>
-                    <li>Telephone: 05 56 79 52 00</li>
-                </ul>
-                <ul class="adress">
-                    <li>Campus du Lac Rive droite</li>
-                    <li>7 bis rue max Linder</li>
-                    <li>BP 194</li>
-                    <li>33504 Libourne Cedex</li>
-                    <li>Telephone: 05 56 79 52 00</li>
-                </ul>
+    <body>
+        <header class="main-header">
+            <div class="logo">
+                <a href="index.html"
+                    ><img
+                        src="/assets/img/src/logo_campus_transparent.PNG.png"
+                        alt=""
+                /></a>
             </div>
+            <div class="burger-bar" id="burger">
+                <div class="first-line"></div>
+                <div class="second-line"></div>
+                <div class="third-line"></div>
+            </div>
+        </header>
+        <nav class="main-menu" id="main-menu">
+            <ul class="first-menu">
+                <li><a href="index.html">Accueil</a></li>
+                <li id="portfolio">
+                    <a>Portfolio</a>
+                    <ul class="second-menu" id="secondary-menu">
+                        <li>
+                            <a href="portfolio-section-dev.html">Web Devs</a>
+                        </li>
+                        <li>
+                            <a href="portfolio-section-design.html"
+                                >Web Design</a
+                            >
+                        </li>
+                        <li>
+                            <a href="portfolio-section-cpw.html"
+                                >Chef Projet Marketing</a
+                            >
+                        </li>
+                        <li>
+                            <a href="portfolio-section-graph.html">Graphiste</a>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div id="login-container">
+            <h2>Connectez -vous à votre espace</h2>
+            <input type="email" placeholder="sam-oustache@gitstash.com" />
+            <input type="password" placeholder="Mot de passe" />
+            <p class="mot_oublié"><a href="#">Mot de passe oublié ? </a></p>
+            <p><a href="create-1.html">Ou inscrivez-vous</a></p>
+            <input class="login-button" type="submit" value="Connexion" />
         </div>
-        <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
-    <script src="./assets/js/dist/scripts.min.js"></script>
-</body>
+        <!-- FOOTER -->
+        <div class="main2"></div>
+        <footer>
+            <div id="footer">
+                <div id="footer-head">
+                    <div id="campus-logo-mobile">
+                        <img
+                            src="./assets/img/src/logo-white.svg"
+                            alt="logo-campus"
+                            id="campus-log"
+                        />
+                    </div>
+                    <ul class="networks-icons-mobile">
+                        <li>
+                            <a
+                                href="https://www.instagram.com/campusdulac/?hl=fr"
+                                ><i class="fab fa-instagram"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/campusdulac/"
+                                ><i class="fab fa-facebook-f"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/campusdulac?lang=fr"
+                                ><i class="fab fa-twitter"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                ><i class="fab fa-linkedin-in"></i
+                            ></a>
+                        </li>
+                    </ul>
 
+                    <div class="large-links">
+                        <ul class="networks-icons-large">
+                            <li>
+                                <a
+                                    href="https://www.instagram.com/campusdulac/?hl=fr"
+                                    ><i class="fab fa-instagram"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/campusdulac/"
+                                    ><i class="fab fa-facebook-f"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://twitter.com/campusdulac?lang=fr"
+                                    ><i class="fab fa-twitter"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                    ><i class="fab fa-linkedin-in"></i
+                                ></a>
+                            </li>
+                        </ul>
+                        <ul id="foot-links">
+                            <li><a href="cgu.html">CGU</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li>
+                                <a href="mention.html"> Mentions légales </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <ul>
+                        <li>Campus Du lac Rive Gauche</li>
+                        <li>10 Rue Rene Cassin</li>
+                        <li>CS 31996</li>
+                        <li>33071 Bordeaux Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                    <ul class="adress">
+                        <li>Campus du Lac Rive droite</li>
+                        <li>7 bis rue max Linder</li>
+                        <li>BP 194</li>
+                        <li>33504 Libourne Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                </div>
+            </div>
+            <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+        <script src="./assets/js/dist/scripts.min.js"></script>
+    </body>
 </html>
