--- a/portfolio-section-cpw.html
+++ b/portfolio-section-cpw.html
@@ -5,15 +5,24 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Projet Hackaton</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css"
+        />
         <link rel="stylesheet" href="assets/css/dist/style.min.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        />
         <!-- INSERT HERE LIBRARYS -->
     </head>
     <body>
         <header class="main-header">
             <div class="logo">
-                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+                <img
+                    src="/assets/img/src/logo_campus_transparent.PNG.png"
+                    alt=""
+                />
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -27,10 +36,22 @@
                 <li id="portfolio">
                     <a>Portfolio</a>
                     <ul class="second-menu" id="secondary-menu">
-                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
-                        <li><a href="portfolio-section-design.html">Web Design</a></li>
-                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
-                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
+                        <li>
+                            <a href="portfolio-section-dev.html">Web Devs</a>
+                        </li>
+                        <li>
+                            <a href="portfolio-section-design.html"
+                                >Web Design</a
+                            >
+                        </li>
+                        <li>
+                            <a href="portfolio-section-cpw.html"
+                                >Chef Projet Marketing</a
+                            >
+                        </li>
+                        <li>
+                            <a href="portfolio-section-graph.html">Graphiste</a>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="contact.html">Contact</a></li>
@@ -40,7 +61,12 @@
             <h1>Chef projet Webmarketing</h1>
         </div>
         <section class="portfolio">
-            <article data-aos="fade-right" data-aos-duration="1000" id="project-dev-1" class="card">
+            <article
+                data-aos="fade-right"
+                data-aos-duration="200"
+                id="project-dev-1"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -48,7 +74,12 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-up" data-aos-duration="1000" id="project-dev-2" class="card">
+            <article
+                data-aos="fade-up"
+                data-aos-duration="200"
+                id="project-dev-2"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -56,7 +87,12 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-left" data-aos-duration="1000" id="project-dev-3" class="card">
+            <article
+                data-aos="fade-left"
+                data-aos-duration="200"
+                id="project-dev-3"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -64,8 +100,13 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="300" id="project-dev-4"
-                class="card">
+            <article
+                data-aos="fade-right"
+                data-aos-duration="200"
+                data-aos-offset="300"
+                id="project-dev-4"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -73,8 +114,13 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="400" id="project-dev-5"
-                class="card">
+            <article
+                data-aos="fade-up"
+                data-aos-duration="200"
+                data-aos-offset="400"
+                id="project-dev-5"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -82,8 +128,13 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="500" id="project-dev-6"
-                class="card">
+            <article
+                data-aos="fade-left"
+                data-aos-duration="200"
+                data-aos-offset="500"
+                id="project-dev-6"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -91,8 +142,13 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="300" id="project-dev-7"
-                class="card">
+            <article
+                data-aos="fade-right"
+                data-aos-duration="200"
+                data-aos-offset="300"
+                id="project-dev-7"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -100,8 +156,13 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="400" id="project-dev-8"
-                class="card">
+            <article
+                data-aos="fade-up"
+                data-aos-duration="200"
+                data-aos-offset="400"
+                id="project-dev-8"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -109,8 +170,13 @@
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="500" id="project-dev-9"
-                class="card">
+            <article
+                data-aos="fade-left"
+                data-aos-duration="200"
+                data-aos-offset="500"
+                id="project-dev-9"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -125,31 +191,68 @@
             <div id="footer">
                 <div id="footer-head">
                     <div id="campus-logo-mobile">
-                        <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
+                        <img
+                            src="./assets/img/src/logo-white.svg"
+                            alt="logo-campus"
+                            id="campus-log"
+                        />
                     </div>
                     <ul class="networks-icons-mobile">
-                        <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
+                        <li>
+                            <a
+                                href="https://www.instagram.com/campusdulac/?hl=fr"
+                                ><i class="fab fa-instagram"></i
+                            ></a>
                         </li>
-                        <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
-                        <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
-                        <li><a
-                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
-                                    class="fab fa-linkedin-in"></i></a></li>
+                        <li>
+                            <a href="https://www.facebook.com/campusdulac/"
+                                ><i class="fab fa-facebook-f"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/campusdulac?lang=fr"
+                                ><i class="fab fa-twitter"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                ><i class="fab fa-linkedin-in"></i
+                            ></a>
+                        </li>
                     </ul>
                     <div class="large-links">
                         <ul class="networks-icons-large">
-                            <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
+                            <li>
+                                <a
+                                    href="https://www.instagram.com/campusdulac/?hl=fr"
+                                    ><i class="fab fa-instagram"></i
+                                ></a>
                             </li>
-                            <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
-                            <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
-                            <li><a
-                                    href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
-                                        class="fab fa-linkedin-in"></i></a></li>
+                            <li>
+                                <a href="https://www.facebook.com/campusdulac/"
+                                    ><i class="fab fa-facebook-f"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://twitter.com/campusdulac?lang=fr"
+                                    ><i class="fab fa-twitter"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                    ><i class="fab fa-linkedin-in"></i
+                                ></a>
+                            </li>
                         </ul>
                         <ul id="foot-links">
                             <li><a href="cgu.html">CGU</a></li>
                             <li><a href="contact.html">Contact</a></li>
-                            <li><a href="mention.html"> Mentions légales </a></li>
+                            <li>
+                                <a href="mention.html"> Mentions légales </a>
+                            </li>
                         </ul>
                     </div>
                     <ul>
