--- a/userport.html
+++ b/userport.html
@@ -6,15 +6,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Projet Hackaton</title>
         <link rel="stylesheet" href="assets/css/dist/style.min.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
             integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-            crossorigin="anonymous" />
+            crossorigin="anonymous"
+        />
         <!-- INSERT HERE LIBRARYS -->
     </head>
     <body>
         <header class="main-header">
             <div class="logo">
-                <a href="index.html"><img src="/assets/img/src/logo_campus_transparent.PNG.png" alt=""></a>
+                <a href="index.html"
+                    ><img
+                        src="/assets/img/src/logo_campus_transparent.PNG.png"
+                        alt=""
+                /></a>
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -28,10 +35,22 @@
                 <li id="portfolio">
                     <a>Portfolio</a>
                     <ul class="second-menu" id="secondary-menu">
-                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
-                        <li><a href="portfolio-section-design.html">Web Design</a></li>
-                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
-                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
+                        <li>
+                            <a href="portfolio-section-dev.html">Web Devs</a>
+                        </li>
+                        <li>
+                            <a href="portfolio-section-design.html"
+                                >Web Design</a
+                            >
+                        </li>
+                        <li>
+                            <a href="portfolio-section-cpw.html"
+                                >Chef Projet Marketing</a
+                            >
+                        </li>
+                        <li>
+                            <a href="portfolio-section-graph.html">Graphiste</a>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="contact.html">Contact</a></li>
@@ -42,56 +61,92 @@
         </div>
         <div class="user-infos">
             <div id="user-port-img">
-                <img src="./assets/img/src/author.jpg" alt="Sam Oustache">
+                <img src="./assets/img/src/author.jpg" alt="Sam Oustache" />
             </div>
             <h2 class="user-title">Sam Oustache</h2>
             <div class="user-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae delectus quis minus ea consequatur possimus
-                    laboriosam autem nihil laudantium omnis, magnam inventore temporibus rem at. Odit pariatur sit earum rem
-                    repellat ut quod distinctio, accusamus laudantium, libero inventore. Consectetur veniam velit suscipit
-                    recusandae aliquid iusto assumenda ex perspiciatis nulla vero?</p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quae delectus quis minus ea consequatur possimus laboriosam
+                    autem nihil laudantium omnis, magnam inventore temporibus
+                    rem at. Odit pariatur sit earum rem repellat ut quod
+                    distinctio, accusamus laudantium, libero inventore.
+                    Consectetur veniam velit suscipit recusandae aliquid iusto
+                    assumenda ex perspiciatis nulla vero?
+                </p>
             </div>
         </div>
         <h2 class="title-center">Les projets de Sam Oustache :</h2>
         <section class="portfolio" id="sam-portfolio">
-            <article data-aos="fade-right" data-aos-duration="1000" id="project-sam-1" class="card">
+            <article
+                data-aos="fade-right"
+                data-aos-duration="200"
+                id="project-sam-1"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Nom Projet</h2>
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-up" data-aos-duration="1000" id="project-sam-2" class="card">
+            <article
+                data-aos="fade-up"
+                data-aos-duration="200"
+                id="project-sam-2"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Nom Projet</h2>
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-left" data-aos-duration="1000" id="project-sam-3" class="card">
+            <article
+                data-aos="fade-left"
+                data-aos-duration="200"
+                id="project-sam-3"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Nom Projet</h2>
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="300" id="project-sam-4"
-                class="card">
+            <article
+                data-aos="fade-right"
+                data-aos-duration="200"
+                data-aos-offset="300"
+                id="project-sam-4"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Nom Projet</h2>
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="400" id="project-sam-5" class="card">
+            <article
+                data-aos="fade-up"
+                data-aos-duration="200"
+                data-aos-offset="400"
+                id="project-sam-5"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Nom Projet</h2>
                     </a>
                 </div>
             </article>
-            <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="500" id="project-sam-6"
-                class="card">
+            <article
+                data-aos="fade-left"
+                data-aos-duration="200"
+                data-aos-offset="500"
+                id="project-sam-6"
+                class="card"
+            >
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Nom Projet</h2>
@@ -105,34 +160,74 @@
             <span class="dot"></span>
             <span class="dot"></span>
         </div>
-        <div class="main2">
-        </div>
+        <div class="main2"></div>
         <footer>
             <div id="footer">
                 <div id="footer-head">
                     <div id="campus-logo-mobile">
-                        <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
+                        <img
+                            src="./assets/img/src/logo-white.svg"
+                            alt="logo-campus"
+                            id="campus-log"
+                        />
                     </div>
                     <ul class="networks-icons-mobile">
-                        <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
+                        <li>
+                            <a
+                                href="https://www.instagram.com/campusdulac/?hl=fr"
+                                ><i class="fab fa-instagram"></i
+                            ></a>
                         </li>
-                        <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
-                        <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li>
+                            <a href="https://www.facebook.com/campusdulac/"
+                                ><i class="fab fa-facebook-f"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/campusdulac?lang=fr"
+                                ><i class="fab fa-twitter"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                ><i class="fab fa-linkedin-in"></i
+                            ></a>
+                        </li>
                     </ul>
                     <div class="large-links">
                         <ul class="networks-icons-large">
-                            <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
+                            <li>
+                                <a
+                                    href="https://www.instagram.com/campusdulac/?hl=fr"
+                                    ><i class="fab fa-instagram"></i
+                                ></a>
                             </li>
-                            <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
-                            <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr">
-                            <i class="fab fa-linkedin-in"></i></a></li>
+                            <li>
+                                <a href="https://www.facebook.com/campusdulac/"
+                                    ><i class="fab fa-facebook-f"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://twitter.com/campusdulac?lang=fr"
+                                    ><i class="fab fa-twitter"></i
+                                ></a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"
+                                >
+                                    <i class="fab fa-linkedin-in"></i
+                                ></a>
+                            </li>
                         </ul>
                         <ul id="foot-links">
                             <li><a href="cgu.html">CGU</a></li>
                             <li><a href="contact.html">Contact</a></li>
-                            <li><a href="mention.html"> Mentions légales </a></li>
+                            <li>
+                                <a href="mention.html"> Mentions légales </a>
+                            </li>
                         </ul>
                     </div>
                     <ul>
@@ -153,4 +248,4 @@
             </div>
         </footer>
     </body>
-    </html>
+</html>
